# hermes-chat

./: .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  test-online.py  test-real-browser.py  tsconfig.app.json  tsconfig.json  vite.config.ts  vitest.config.ts
backend/: Cargo.toml  README.md  data.db
backend/config/: default.toml
backend/docs/: README.md
backend/docs/backlog/: 2026-06-14_review-backlog.md
backend/docs/design/: 2026-06-14_rust-backend-impl.md  2026-06-15_kan-205-207-208.md
backend/docs/prd/: 2026-06-14_rust-backend.md  2026-06-15_employee-profiles.md  2026-06-15_tenant-permissions.md
backend/migrations/: 001_init.sql  002_token_blacklist.sql  003_invitation_codes.sql  004_audit_logs.sql  005_preset_admin.sql  006_user_tenants.sql  007_fix_permissions_unique.sql  008_invitation_codes_tenants.sql
backend/src/: config.rs  lib.rs  main.rs
backend/src/db/: mod.rs  pool.rs
backend/src/errors/: mod.rs
backend/src/handlers/: admin.rs  auth.rs  chat.rs  employee.rs  kanban.rs  mod.rs  session.rs
backend/src/middleware/: auth.rs  cors.rs  mod.rs  rate_limit.rs  tenant.rs
backend/src/models/: audit_log.rs  invitation_code.rs  kanban.rs  message.rs  mod.rs  permission.rs  session.rs  user.rs
backend/src/services/: admin.rs  auth.rs  chat.rs  employee.rs  hermes.rs  kanban.rs  mod.rs  profile.rs  session.rs
backend/src/utils/: validation.rs
backend/tests/: kanban_tests.rs  permission_tests.rs  profile_tests.rs  tenant_tests.rs  user_tenants_migration_tests.rs
docs/: README.md
(+152 files in other folders)
